Add allure step